RELACION 1 PERSONA MUCHAS EXPERIENCIAS

--- a/Backend/Backend/sh/pom.xml
+++ b/Backend/Backend/sh/pom.xml
@@ -8,15 +8,17 @@
 		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.Portafolio1</groupId>
-	<artifactId>Portafolio1</artifactId>
+	<groupId>com.backend</groupId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Portafolio1</name>
+	<name>backend</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	<dependencies>
+	<dependencies>  
+
+            
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
